--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon -e ts,json -x \"yarn build:dev && yarn start\"",
-    "build:dev": "tsc -p .",
-    "start": "node dist/index.js",
-    "build": "NODE_ENV=production tsc -p .",
-    "prod": "yarn build && node dist/index.js"
+    "dev": "NODE_ENV=development nodemon -e ts,json -x \"ts-node src/server.ts\"",
+    "start": "pm2-runtime dist/server.js",
+    "build": "NODE_ENV=production tsc -p ."
   },
   "dependencies": {
+    "@types/express": "^4.17.9",
     "discord.js": "^12.5.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "pm2": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
@@ -32,6 +33,7 @@
     "eslint-plugin-sonarjs": "^0.5.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
 }
