Update server to use GoatBot singleton

--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,5 @@
 BOT_TOKEN="its-a-secret-to-everyone"
 NODE_ENV="development"
+NODE_AUTH_KEY="put_key_here"
 export PM2_PUBLIC_KEY=fake
 export PM2_SECRET_KEY=fake
