--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "NODE_ENV=production tsc -p ."
   },
   "dependencies": {
+    "@google-cloud/firestore": "^4.8.1",
     "@types/express": "^4.17.9",
     "agenda": "^3.1.0",
     "discord.js": "^12.5.1",
