--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "pm2": "^4.5.1"
+    "pm2": "^4.5.1",
+    "tplink-smarthome-api": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
