--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,12 +58,10 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     /* Advanced Options */
     "skipLibCheck": true /* Skip type checking of declaration files. */,
-    "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
+    "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
+    "resolveJsonModule": true
   },
-  "types": [
-    "node"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "files": ["src/global.d.ts"],
+  "types": ["node"],
+  "exclude": ["node_modules"]
 }
