remove json config deps, use env instead

--- a/.example.env
+++ b/.example.env
@@ -1,10 +1,12 @@
 BOT_TOKEN="its-a-secret-to-everyone"
 NODE_ENV="development"
 NODE_AUTH_KEY="put_key_here"
-CLEARABLE_CHANNELS=""
+
+GCP_PROJECT_ID="project_id"
+GCP_PROJECT_KEYFILE="/home/$USER/creds/goat-bot.json"
+
+CLEARABLE_CHANNELS=[]
 
 export PM2_PUBLIC_KEY=fake
 export PM2_SECRET_KEY=fake
 
-GCP_PROJECT_ID="project_id"
-GCP_PROJECT_KEYFILE="/home/$USER/creds/goat-bot.json"
